[chore] #2 JobSetting 관련 파일 패키지 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             tools:ignore="LockedOrientationActivity" />
 
         <activity
-            android:name=".presentation.auth.AuthSettingActivity"
+            android:name=".presentation.auth.setting.AuthSettingActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
 
