[feat] #8 프로필 수정뷰로 이동하는 로직 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,11 @@
             tools:ignore="LockedOrientationActivity" />
 
         <activity
+            android:name=".presentation.mypage.ProfileSettingActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+
+        <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
             <intent-filter>
