[feat] 일용직 근로자 디테일 뷰 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,11 @@
             tools:ignore="LockedOrientationActivity" />
 
         <activity
+            android:name=".presentation.daily.daylabor.WorkDetailDayLaborActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
+
+        <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
             <intent-filter>
